@@ -1,3 +1,11 @@
+2008-06-23  Christian Persch  <chpe@gnome.org>
+
+	* src/connection-editor/page-wireless-security.c:
+	(ce_page_wireless_security_new):
+	* src/wireless-dialog.c: (connection_combo_init),
+	(device_combo_init), (internal_init): Don't use deprecated gtk type
+	macros. Bug #539325.
+
 2008-06-20  Dan Williams  <dcbw@redhat.com>
 
 	Update for VPN UI plugin API changes
